src/objects/MetadataRecordType__c.object
<CustomObject>
    <fields>
        <fullName>AssetSummary__c</fullName>
        <formula>IF(
    IsManaged__c,
    &apos;Managed &apos;,
    &apos;&apos;
)
+
&apos;Custom Record Type&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset Summary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DesignNotes__c</fullName>
        <label>Design Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DeveloperName__c</fullName>
        <description>System generated</description>
        <externalId>true</externalId>
        <inlineHelpText>System generated</inlineHelpText>
        <label>Developer Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>System generated</description>
        <inlineHelpText>System generated</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsClosed__c</fullName>
        <description>System generated.</description>
        <formula>OR(
    TEXT(Status__c) == &apos;Not Used&apos;,
    TEXT(Status__c) == &apos;Closed&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>System generated.</inlineHelpText>
        <label>Is Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsCustom__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Custom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsInScope__c</fullName>
        <formula>OR(
    IsClosed__c = false,
    TEXT(Status__c) = &apos;Approved&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is In Scope</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsManaged__c</fullName>
        <description>System generated.</description>
        <formula>TEXT(Namespace__c) != null</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>System generated.</inlineHelpText>
        <label>Is Managed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsMaster__c</fullName>
        <defaultValue>false</defaultValue>
        <description>System generated</description>
        <inlineHelpText>System generated</inlineHelpText>
        <label>Is Master</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MetadataSObject__c</fullName>
        <label>SObject</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>MetadataSObject__c.IsInScope__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>MetadataSObject__c</referenceTo>
        <relationshipLabel>Record Types</relationshipLabel>
        <relationshipName>MetadataRecordTypes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Namespace__c</fullName>
        <description>System generated</description>
        <inlineHelpText>System generated</inlineHelpText>
        <label>Namespace</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>MetadataStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>UploadId__c</fullName>
        <description>A unique, external ID - you can use this to store any value you want for upserting records.</description>
        <externalId>true</externalId>
        <label>Upload ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Uuid__c</fullName>
        <externalId>true</externalId>
        <label>UUID</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Record Type</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>MetadataSObject__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>DeveloperName__c</columns>
        <columns>IsActive__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AllInScope</fullName>
        <columns>NAME</columns>
        <columns>MetadataSObject__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>DeveloperName__c</columns>
        <columns>IsActive__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsInScope__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All In Scope</label>
    </listViews>
    <listViews>
        <fullName>AllOpen</fullName>
        <columns>NAME</columns>
        <columns>MetadataSObject__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>DeveloperName__c</columns>
        <columns>IsActive__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsClosed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open</label>
    </listViews>
    <nameField>
        <label>Record Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Record Types</pluralLabel>
    <recordTypes>
        <fullName>Asset</fullName>
        <active>true</active>
        <description>Design &amp; config have been started</description>
        <label>Asset</label>
    </recordTypes>
    <recordTypes>
        <fullName>Blueprint</fullName>
        <active>true</active>
        <description>I have an idea with some or all details</description>
        <label>Blueprint</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>